# Commit-Challenge-2025

./: .env.example  .gitignore  404.html  AGENTS.md  Advent.HTML.html  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  about.css  about.html  actions.md  actions2.md  adventageous.js  analysis.txt  bot.mts  cavegameDONOTDELETE.pub  doge.csv  fetch.mjs  github-actions.pub  gpt.txt  gpt_prompt.txt  help.html  index.html  login.html  package-lock.json  package.json  random.ipynb  requirements.txt  seans-retreat-attempt.html  ssh_key  ssh_key.pub  stats.html  test-output.txt  tsconfig.json  vocaloid.html  watch_party.md
.github/: jules_issue_template.md
a_task/: create_a_file.py
about/: about-page-ideas.md  index.html
actions/: act.mts  act_v2.mts  google rest types .mts  prompt.md  prompt_respond.md  prompt_state.md  prompt_state2.md  prompt_state2.mts  state.yml  state2.yml
cave-game/: .gitignore  .prettierrc.json  README.md  build.ts  db-old.json  deploy_serve.sh  eslint.config.js  index.html  package.json  tsconfig.json
cert-fetch/: fetch.mjs  run.sh  server.mjs  server.test.mjs
cube-spin/: cube-spin-engine.js  cube-spin-engine.ts  index.html
doxx/: vibe-process.md  vibe-process.py  vibe-process.txt  vibe-process.typ
escape/: GAME.js  GAMER.ts  Inventory.ts  README.md  index.html  package.json  renderer.ts  tsconfig.json  types.ts
explodes/: index.html
qrbox/: a.html  (+1 more)
🍴💩/actrs/: Cargo.toml
🍴💩/actrs/src/: messenger.rs  oracle.rs
🍴💩/tools/chrome-cookie-decrypter/: Cargo.toml  README.md  decrypt.js
🍴💩/tools/chrome-cookie-decrypter/src/: main.rs
(+191 files in other folders)
