[package]
name = "chrome-cookie-decrypter"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.6", features = ["derive"] }
base64 = "0.21.4"
rusqlite = { version = "0.29.0", features = ["bundled"] }
aes-gcm = "0.10.3"
anyhow = "1.0.75"
